# polymer-knowledge-graph

./: .gitignore  pyproject.toml
examples/: run_pipeline.py
polymer_mineru_pipeline/: config.py  pipeline_runner.py
polymer_mineru_pipeline/export/: dataset_builder.py  schemas.py
polymer_mineru_pipeline/ner/: chem_ner.py  function_extractor.py  reaction_extractor.py
polymer_mineru_pipeline/parsing/: layout_analyzer.py  ocr_math.py  pdf_parser.py
polymer_mineru_pipeline/processing/: chunker.py  normalizer.py
src/polymer_knowledge_graph/: config.py  utils.py
src/polymer_knowledge_graph/ner/: __init__.py
src/polymer_knowledge_graph/pdf_parser/: base.py
